--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build project with MPLAB X IDE
-        uses: pat-bert/mplab-xc8-action@1.0
+        uses: pat-bert/mplab-xc8-action@main
         with:
           project: plantMonitoring.X
           packs: "ATmega_DFP=3.3.279"
